--- a/a/package.json
+++ b/a/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "next-devtools-mcp": "^0.3.10",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
